# pastebin

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: db.rs  get_paste.rs  main.rs  make_paste.rs  routes.rs
frontend/: package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: Nav.tsx
