[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
mysql = "24.0.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
